Creado la pagina principal con menu, todavia sin hacer la conexion correctamente

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,12 @@
             android:screenOrientation="portrait"
             android:exported="false" />
 
+        <activity
+            android:name=".PrincipalActivity"
+            android:screenOrientation="portrait"
+            android:exported="false" />
+
+
     </application>
 
 </manifest>
